responsive ok a vérifier et améliorer sous certaines tailles

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
     </nav>  
     <!-- Nav mobile-->
-    <section class="topnav-mobile">
+    <div class="topnav-mobile">
         <a href="#home" class="active">
             <img src="images/top-logo.png" alt="Logo One milion lines">
         </a>
@@ -29,7 +29,7 @@
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
             <i class="fa fa-bars"></i>
         </a>
-    </section>
+    </div>
 </header>
 <body>
     <section id="home">
