ajout d'un meta header pour SEO

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="This is a short reproduction of an existing site in raw HTML and CSS">
     <link rel="stylesheet" href="css/custom.css" >
     <link rel="stylesheet" href="fonts/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -34,9 +35,9 @@
     </header>
     <section id="home">
         <div class="glasmorphism-test">
-            <h2>
+            <h1>
                 Our goal is to inspire Tallahassee to write 1,000,000 lines of code_
-            </h2>
+            </h1>
             <p>
                 All over the country people are taking the <strong>HOUR OF CODE</strong> challenge issued by
                 <strong>CODE.org.</strong>.Millions of lines of code are being written. In the capital of Florida,
